# Fuz-Downloader

./: .gitignore  README.md  flake.nix  fuz-donwloader  pyproject.toml
data/: context-blank.yaml  context-en-US.yaml  context-ja-JP.yaml  context-zh-TW.yaml  language-setting.yaml  output-setting.yaml
data/context/: context-en-US.yaml  context-ja-JP.yaml  context-zh-TW.yaml
data/image/: icon.kra  icon.kra~  icon2.png~
fuzdownloader/: browser.py  console.py  context.py  downloader.py  func.py  main.py  mkpdf.py  param.py  theme.py
fuzdownloader/blackboxprotobuf/lib/: api.py
fuzdownloader/qt5-gui/: LoginWindow.py  browser.py  demo.py  main.py  mkpdf.py
fuzdownloader/qt5-gui/blackboxprotobuf/lib/types/: length_delim.py  varint.py
fuzdownloader/qt5-gui/resource/: resource.qrc
fuzdownloader/qt5-gui/resource/ui/: LoginWindow.py  LoginWindow.ui
src/: func.py  img2pdf.py  main.py  mkpdf.py
