[tool.poetry]
name = "fuzdownloader"
version = "1.0.1"
description = ""
authors = ["Kumaizep <321orz321@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
blessed = "^1.20.0"
fpdf = "^1.7.2"
img2pdf = "^0.4.4"
inquirer = "^2.10.1"
protobuf = "^4.25.3"
PyPDF2 = "^2.12.1"
PyYAML = "^6.0.1"
rich = "^12.6.0"
selenium = "^4.18.1"
six = "^1.16.0"
webdriver-manager = "^3.9.1"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
fuzdownloader = "fuzdownloader.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
